# Ai-MiniMax-TicTacToe

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TicTacToe
lib/: ticTacToe.cpp
src/: main.cpp  ticTacToe.cpp  ticTacToe.h
